fix: overflow

--- a/src/pages/Tools/Tools.css
+++ b/src/pages/Tools/Tools.css
@@ -1,5 +1,5 @@
 .container_tools {
-  max-width: 880px;
+  width: 880px;
   margin: 40px auto;
   overflow-x: hidden;
 }
